# quotelementa

./: .gitignore  Cargo.toml
src/: assigner.rs  crawler.rs  main.rs  state.rs  tui.rs  util.rs
src/tui/: bar_chart.rs
