[package]
name = "quotelementa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crossterm = "0.26.1"
ctrlc = "3.2"
dashmap = "5.4.0"
deadqueue = "0.2"
eyre = "0.6"
fantoccini = "0.19"
futures-util = "0.3"
indexmap = "1.9"
phf = { version = "0.11.1", features = ["macros"] }
ratatui = "0.20.1"
serde_json = "1.0"
tokio = { version = "1.27", features = [
	"rt-multi-thread",
	"macros",
	"io-util",
	"fs",
	"process",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tui-logger = { version = "0.9.0", features = ["ratatui-support", "tracing-support"], default-features = false }
url = "2.3"
