[package]
name = "quotelementa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
crossterm = { version = "0.26", features = ["event-stream"] }
dashmap = "5.4"
deadqueue = "0.2"
eyre = "0.6"
fantoccini = "0.19"
futures-util = "0.3"
phf = { version = "0.11", features = ["macros"] }
ratatui = "0.20"
serde_json = "1.0"
tokio = { version = "1.27", features = [
	"rt-multi-thread",
	"macros",
	"io-util",
	"fs",
	"process",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tui-logger = { version = "0.9", features = [
	"ratatui-support",
	"tracing-support",
], default-features = false }
url = "2.3"
