[package]
name = "quotelementa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
crossterm = { version = "0.26", features = ["event-stream"] }
deadqueue = "0.2"
eyre = "0.6"
fantoccini = "0.19"
futures-util = "0.3"
ratatui = "0.20"
serde_json = "1.0"
strum = { version = "0.24", features = ["phf", "derive"] }
tokio = { version = "1.27", features = [
	"rt-multi-thread",
	"macros",
	"io-util",
	"fs",
	"process",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tui-logger = { version = "0.9", features = [
	"ratatui-support",
	"tracing-support",
], default-features = false }
unicode-width = "0.1"
url = "2.3"
